--- a/Member-Balance.html
+++ b/Member-Balance.html
@@ -184,8 +184,8 @@
                                 </div> -->
                             </div>
                             <div class="row btn-action">
-                                <a class="btn btn-bg-blue" href="http://ldyllive.com/Member-Deposit.html">前往充值</a>
-                                <a class="btn btn-bg-blue" href="http://ldyllive.com/Member-Transfer.html">前往转帐</a>
+                                <a class="btn btn-bg-blue" href="/Member-Deposit.html">前往充值</a>
+                                <a class="btn btn-bg-blue" href="/Member-Transfer.html">前往转帐</a>
                             </div>
                         </div>
                     </div>
@@ -397,7 +397,7 @@
             }
             function userInformation() {
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/getUser?sess=" + sessionStorage.session,
+                    url: "/api/Api/getUser?sess=" + sessionStorage.session,
                     type: "GET",
                     success: function (data) {
                         if (data.status) {
@@ -415,7 +415,7 @@
 
             $(window).load(function () {
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/getFooterInfo",
+                    url: "/api/Api/getFooterInfo",
                     type: "GET",
                     success: function (data) {
                         console.log(data)
@@ -452,7 +452,7 @@
                 var _account = _parent.find('[name=account]').val();
                 var _passwd = _parent.find('[name=passwd]').val();
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/login",
+                    url: "/api/Api/login",
                     type: "POST",
                     data: JSON.stringify({
                         account: _account,
@@ -476,7 +476,7 @@
             });
             $('.ajax-btn-logout').click(function () {
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/logout",
+                    url: "/api/Api/logout",
                     type: "GET",
                     success: function (data) {
                         if (data.status) {
@@ -487,7 +487,7 @@
                                     $('.jq-login-before').show();
                                     $('.jq-login-after').hide();
                                     $('.jq-member-nam').empty();
-                                    window.location.href = 'http://ldyllive.com/Home-Index.html';
+                                    window.location.href = '/Home-Index.html';
                                     break;
                             }
                         }
@@ -500,7 +500,7 @@
                 checkPhone(_pcb_phone);
                 if (_phone_key == true) {
                     $.ajax({
-                        url: "http://ldyllive.com/api/Api/addPhonecCallBack?sess=" + sessionStorage.session,
+                        url: "/api/Api/addPhonecCallBack?sess=" + sessionStorage.session,
                         type: "POST",
                         data: JSON.stringify({
                             pcb_phone: _pcb_phone,
@@ -521,7 +521,7 @@
             });
             $('.jq-btn-pop-register').click(function () {
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/getCaptcha",
+                    url: "/api/Api/getCaptcha",
                     type: "GET",
                     success: function (data) {
                         $(".jq-pop-register").find('.jq-captcha-container').find('img').remove();
@@ -545,7 +545,7 @@
                 var _password = $('.jq-pop-register').find('[name=password]').val();
                 var _captcha = $('.jq-pop-register').find('[name=captcha]').val();
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/registered/" + _invitecode,
+                    url: "/api/Api/registered/" + _invitecode,
                     type: "POST",
                     data: JSON.stringify({
                         name: _username,
@@ -572,7 +572,7 @@
 
             $(window).load(function () {
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/withdrawalForm?sess=" + sessionStorage.session,
+                    url: "/api/Api/withdrawalForm?sess=" + sessionStorage.session,
                     type: "GET",
                     success: function (data) {
                         if (data.status) {
@@ -586,7 +586,7 @@
                     }
                 });
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/getThirdBlance?sess=" + sessionStorage.session,
+                    url: "/api/Api/getThirdBlance?sess=" + sessionStorage.session,
                     type: "GET",
                     success: function (data) {
                         if (data.status) {
