--- a/Member-CardManagement.html
+++ b/Member-CardManagement.html
@@ -20,7 +20,7 @@
     <div id="wrapper">
         <header>
             <div class="container clear">
-                <a href="http://ldyllive.com" class="img-container">
+                <a href="" class="img-container">
                     <img src="img/logo.png" alt="乐鼎国际">
                 </a>
                 <div class="login-information">
@@ -392,7 +392,7 @@
             }
             function userInformation() {
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/getUser?sess=" + sessionStorage.session,
+                    url: "/api/Api/getUser?sess=" + sessionStorage.session,
                     type: "GET",
                     success: function (data) {
                         if (data.status) {
@@ -410,7 +410,7 @@
 
             $(window).load(function () {
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/getFooterInfo",
+                    url: "/api/Api/getFooterInfo",
                     type: "GET",
                     success: function (data) {
                         console.log(data)
@@ -447,7 +447,7 @@
                 var _account = _parent.find('[name=account]').val();
                 var _passwd = _parent.find('[name=passwd]').val();
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/login",
+                    url: "/api/Api/login",
                     type: "POST",
                     data: JSON.stringify({
                         account: _account,
@@ -471,7 +471,7 @@
             });
             $('.ajax-btn-logout').click(function () {
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/logout",
+                    url: "/api/Api/logout",
                     type: "GET",
                     success: function (data) {
                         if (data.status) {
@@ -482,7 +482,7 @@
                                     $('.jq-login-before').show();
                                     $('.jq-login-after').hide();
                                     $('.jq-member-nam').empty();
-                                    window.location.href = 'http://ldyllive.com/Home-Index.html';
+                                    window.location.href = '/Home-Index.html';
                                     break;
                             }
                         }
@@ -495,7 +495,7 @@
                 checkPhone(_pcb_phone);
                 if (_phone_key == true) {
                     $.ajax({
-                        url: "http://ldyllive.com/api/Api/addPhonecCallBack?sess=" + sessionStorage.session,
+                        url: "/api/Api/addPhonecCallBack?sess=" + sessionStorage.session,
                         type: "POST",
                         data: JSON.stringify({
                             pcb_phone: _pcb_phone,
@@ -516,7 +516,7 @@
             });
             $('.jq-btn-pop-register').click(function () {
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/getCaptcha",
+                    url: "/api/Api/getCaptcha",
                     type: "GET",
                     success: function (data) {
                         $(".jq-pop-register").find('.jq-captcha-container').find('img').remove();
@@ -540,7 +540,7 @@
                 var _password = $('.jq-pop-register').find('[name=password]').val();
                 var _captcha = $('.jq-pop-register').find('[name=captcha]').val();
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/registered/" + _invitecode,
+                    url: "/api/Api/registered/" + _invitecode,
                     type: "POST",
                     data: JSON.stringify({
                         name: _username,
@@ -568,7 +568,7 @@
             var delete_key
             function bankInfor() {
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/setUserBankInfoForm?sess=" + sessionStorage.session +
+                    url: "/api/Api/setUserBankInfoForm?sess=" + sessionStorage.session +
                         "&p=1&limit=5",
                     type: "GET",
                     success: function (data) {
@@ -606,7 +606,7 @@
                     var key = $(this).attr('data-btn-true-false');
                     if (key == 'true') {
                         $.ajax({
-                            url: "http://ldyllive.com/api/Api/lockUserBankCard?sess=" + sessionStorage
+                            url: "/api/Api/lockUserBankCard?sess=" + sessionStorage
                                 .session,
                             type: "GET",
                             success: function (data) {
@@ -633,7 +633,7 @@
                     var key = $(this).attr('data-btn-true-false');
                     if (key == 'true') {
                         $.ajax({
-                            url: "http://ldyllive.com/api/Api/delUserBankCard?sess=" + sessionStorage
+                            url: "/api/Api/delUserBankCard?sess=" + sessionStorage
                                 .session,
                             type: "POST",
                             data: JSON.stringify({
@@ -671,7 +671,7 @@
                 console.log(_account, _account_name, _branch_name, _province, _city);
                 if (_account == _account_check) {
                     $.ajax({
-                        url: "http://ldyllive.com/api/Api/setUserBankInfo?sess=" + sessionStorage.session,
+                        url: "/api/Api/setUserBankInfo?sess=" + sessionStorage.session,
                         type: "POST",
                         data: JSON.stringify({
                             account_name: _account_name, // 帳戶名稱
@@ -723,7 +723,7 @@
             // CashCheck
             function cashpassword_check(_passwd) {
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/checkMoneyPasswd?sess=" + sessionStorage.session,
+                    url: "/api/Api/checkMoneyPasswd?sess=" + sessionStorage.session,
                     type: "POST",
                     data: JSON.stringify({
                         passwd: _passwd,
@@ -747,7 +747,7 @@
 
             $(window).load(function () {
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/UserMoneyPasswd?sess=" + sessionStorage.session,
+                    url: "/api/Api/UserMoneyPasswd?sess=" + sessionStorage.session,
                     type: "GET",
                     success: function (data) {
                         if (data.body.isSet == 0) {
