--- a/Member-Message.html
+++ b/Member-Message.html
@@ -364,7 +364,7 @@
             }
             function userInformation() {
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/getUser?sess=" + sessionStorage.session,
+                    url: "/api/Api/getUser?sess=" + sessionStorage.session,
                     type: "GET",
                     success: function (data) {
                         if (data.status) {
@@ -382,7 +382,7 @@
 
             $(window).load(function () {
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/getFooterInfo",
+                    url: "/api/Api/getFooterInfo",
                     type: "GET",
                     success: function (data) {
                         console.log(data)
@@ -419,7 +419,7 @@
                 var _account = _parent.find('[name=account]').val();
                 var _passwd = _parent.find('[name=passwd]').val();
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/login",
+                    url: "/api/Api/login",
                     type: "POST",
                     data: JSON.stringify({
                         account: _account,
@@ -443,7 +443,7 @@
             });
             $('.ajax-btn-logout').click(function () {
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/logout",
+                    url: "/api/Api/logout",
                     type: "GET",
                     success: function (data) {
                         if (data.status) {
@@ -454,7 +454,7 @@
                                     $('.jq-login-before').show();
                                     $('.jq-login-after').hide();
                                     $('.jq-member-nam').empty();
-                                    window.location.href = 'http://ldyllive.com/Home-Index.html';
+                                    window.location.href = '/Home-Index.html';
                                     break;
                             }
                         }
@@ -467,7 +467,7 @@
                 checkPhone(_pcb_phone);
                 if (_phone_key == true) {
                     $.ajax({
-                        url: "http://ldyllive.com/api/Api/addPhonecCallBack?sess=" + sessionStorage.session,
+                        url: "/api/Api/addPhonecCallBack?sess=" + sessionStorage.session,
                         type: "POST",
                         data: JSON.stringify({
                             pcb_phone: _pcb_phone,
@@ -488,7 +488,7 @@
             });
             $('.jq-btn-pop-register').click(function () {
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/getCaptcha",
+                    url: "/api/Api/getCaptcha",
                     type: "GET",
                     success: function (data) {
                         $(".jq-pop-register").find('.jq-captcha-container').find('img').remove();
@@ -512,7 +512,7 @@
                 var _password = $('.jq-pop-register').find('[name=password]').val();
                 var _captcha = $('.jq-pop-register').find('[name=captcha]').val();
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/registered/" + _invitecode,
+                    url: "/api/Api/registered/" + _invitecode,
                     type: "POST",
                     data: JSON.stringify({
                         name: _username,
@@ -551,7 +551,7 @@
 
             $(window).load(function () {
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/getUserMessageList?sess=" + sessionStorage.session +
+                    url: "/api/Api/getUserMessageList?sess=" + sessionStorage.session +
                         "&p=1$limit=5",
                     type: "GET",
                     success: function (data) {
@@ -583,7 +583,7 @@
             $(document).on('click', '.jq-btn-message-view', function () {
                 var key = $(this).attr('data-um-id');
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/getUserMessage?sess=" + sessionStorage.session,
+                    url: "/api/Api/getUserMessage?sess=" + sessionStorage.session,
                     type: "POST",
                     data: JSON.stringify({
                         um_id: key,
@@ -617,7 +617,7 @@
                 var _message_content = $('[name=message-content]').val();
                 if (_message_type == 'up') {
                     $.ajax({
-                        url: "http://ldyllive.com/api/Api/sendSuperiorUserMessage?sess=" +
+                        url: "/api/Api/sendSuperiorUserMessage?sess=" +
                             sessionStorage.session,
                         type: "POST",
                         data: JSON.stringify({
@@ -638,7 +638,7 @@
                     });
                 } else if (_message_type == 'all-down') {
                     $.ajax({
-                        url: "http://ldyllive.com/api/Api/sendSubordinateUserMessage?sess=" +
+                        url: "/api/Api/sendSubordinateUserMessage?sess=" +
                             sessionStorage.session,
                         type: "POST",
                         data: JSON.stringify({
@@ -660,7 +660,7 @@
                     });
                 } else if (_message_type == 'down') {
                     $.ajax({
-                        url: "http://ldyllive.com/api/Api/sendSubordinateUserMessage?sess=" +
+                        url: "/api/Api/sendSubordinateUserMessage?sess=" +
                             sessionStorage.session,
                         type: "POST",
                         data: JSON.stringify({
