--- a/Member-Password.html
+++ b/Member-Password.html
@@ -421,7 +421,7 @@
             }
             function userInformation() {
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/getUser?sess=" + sessionStorage.session,
+                    url: "/api/Api/getUser?sess=" + sessionStorage.session,
                     type: "GET",
                     success: function (data) {
                         if (data.status) {
@@ -439,7 +439,7 @@
 
             $(window).load(function () {
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/getFooterInfo",
+                    url: "/api/Api/getFooterInfo",
                     type: "GET",
                     success: function (data) {
                         console.log(data)
@@ -476,7 +476,7 @@
                 var _account = _parent.find('[name=account]').val();
                 var _passwd = _parent.find('[name=passwd]').val();
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/login",
+                    url: "/api/Api/login",
                     type: "POST",
                     data: JSON.stringify({
                         account: _account,
@@ -500,7 +500,7 @@
             });
             $('.ajax-btn-logout').click(function () {
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/logout",
+                    url: "/api/Api/logout",
                     type: "GET",
                     success: function (data) {
                         if (data.status) {
@@ -511,7 +511,7 @@
                                     $('.jq-login-before').show();
                                     $('.jq-login-after').hide();
                                     $('.jq-member-nam').empty();
-                                    window.location.href = 'http://ldyllive.com/Home-Index.html';
+                                    window.location.href = '/Home-Index.html';
                                     break;
                             }
                         }
@@ -524,7 +524,7 @@
                 checkPhone(_pcb_phone);
                 if (_phone_key == true) {
                     $.ajax({
-                        url: "http://ldyllive.com/api/Api/addPhonecCallBack?sess=" + sessionStorage.session,
+                        url: "/api/Api/addPhonecCallBack?sess=" + sessionStorage.session,
                         type: "POST",
                         data: JSON.stringify({
                             pcb_phone: _pcb_phone,
@@ -545,7 +545,7 @@
             });
             $('.jq-btn-pop-register').click(function () {
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/getCaptcha",
+                    url: "/api/Api/getCaptcha",
                     type: "GET",
                     success: function (data) {
                         $(".jq-pop-register").find('.jq-captcha-container').find('img').remove();
@@ -569,7 +569,7 @@
                 var _password = $('.jq-pop-register').find('[name=password]').val();
                 var _captcha = $('.jq-pop-register').find('[name=captcha]').val();
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/registered/" + _invitecode,
+                    url: "/api/Api/registered/" + _invitecode,
                     type: "POST",
                     data: JSON.stringify({
                         name: _username,
@@ -595,7 +595,7 @@
             // Privity
             $('[data-password=cash]').click(function () {
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/UserMoneyPasswd?sess=" + sessionStorage.session,
+                    url: "/api/Api/UserMoneyPasswd?sess=" + sessionStorage.session,
                     type: "GET",
                     success: function (data) {
                         var _key = data.body.isSet;
@@ -621,7 +621,7 @@
                 var _check_passwd = $('.jq-user-password').find('[name=new-userpasswd-check]').val();
                 if (_new_passwd == _check_passwd) {
                     $.ajax({
-                        url: "http://ldyllive.com/api/Api/setUserPassword?sess=" + sessionStorage.session,
+                        url: "/api/Api/setUserPassword?sess=" + sessionStorage.session,
                         type: "POST",
                         data: JSON.stringify({
                             passwd: _new_passwd,
@@ -648,7 +648,7 @@
                 var _check_passwd = $('.jq-user-cashpassword-first').find('[name=cashpasswd-check]').val();
                 if (_passwd == _check_passwd) {
                     $.ajax({
-                        url: "http://ldyllive.com/api/Api/setUserMoneyPassword?sess=" + sessionStorage.session,
+                        url: "/api/Api/setUserMoneyPassword?sess=" + sessionStorage.session,
                         type: "POST",
                         data: JSON.stringify({
                             passwd: _passwd
@@ -678,7 +678,7 @@
                 console.log(_check_passwd);
                 if (_new_passwd == _check_passwd) {
                     $.ajax({
-                        url: "http://ldyllive.com/api/Api/setUserMoneyPassword?sess=" + sessionStorage.session,
+                        url: "/api/Api/setUserMoneyPassword?sess=" + sessionStorage.session,
                         type: "POST",
                         data: JSON.stringify({
                             passwd: _new_passwd,
