--- a/Member-Apply-Discount.html
+++ b/Member-Apply-Discount.html
@@ -361,7 +361,7 @@
             }
             function userInformation() {
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/getUser?sess=" + sessionStorage.session,
+                    url: "/api/Api/getUser?sess=" + sessionStorage.session,
                     type: "GET",
                     success: function (data) {
                         if (data.status) {
@@ -379,7 +379,7 @@
 
             $(window).load(function () {
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/getFooterInfo",
+                    url: "/api/Api/getFooterInfo",
                     type: "GET",
                     success: function (data) {
                         console.log(data)
@@ -416,7 +416,7 @@
                 var _account = _parent.find('[name=account]').val();
                 var _passwd = _parent.find('[name=passwd]').val();
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/login",
+                    url: "/api/Api/login",
                     type: "POST",
                     data: JSON.stringify({
                         account: _account,
@@ -440,7 +440,7 @@
             });
             $('.ajax-btn-logout').click(function () {
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/logout",
+                    url: "/api/Api/logout",
                     type: "GET",
                     success: function (data) {
                         if (data.status) {
@@ -451,7 +451,7 @@
                                     $('.jq-login-before').show();
                                     $('.jq-login-after').hide();
                                     $('.jq-member-nam').empty();
-                                    window.location.href = 'http://ldyllive.com/Home-Index.html';
+                                    window.location.href = '/Home-Index.html';
                                     break;
                             }
                         }
@@ -464,7 +464,7 @@
                 checkPhone(_pcb_phone);
                 if (_phone_key == true) {
                     $.ajax({
-                        url: "http://ldyllive.com/api/Api/addPhonecCallBack?sess=" + sessionStorage.session,
+                        url: "/api/Api/addPhonecCallBack?sess=" + sessionStorage.session,
                         type: "POST",
                         data: JSON.stringify({
                             pcb_phone: _pcb_phone,
@@ -485,7 +485,7 @@
             });
             $('.jq-btn-pop-register').click(function () {
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/getCaptcha",
+                    url: "/api/Api/getCaptcha",
                     type: "GET",
                     success: function (data) {
                         $(".jq-pop-register").find('.jq-captcha-container').find('img').remove();
@@ -509,7 +509,7 @@
                 var _password = $('.jq-pop-register').find('[name=password]').val();
                 var _captcha = $('.jq-pop-register').find('[name=captcha]').val();
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/registered/" + _invitecode,
+                    url: "/api/Api/registered/" + _invitecode,
                     type: "POST",
                     data: JSON.stringify({
                         name: _username,
@@ -535,7 +535,7 @@
             // Privity
             $(window).load(function () {
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/setDiscountFrom?sess=" + sessionStorage.session,
+                    url: "/api/Api/setDiscountFrom?sess=" + sessionStorage.session,
                     type: "GET",
                     success: function (data) {
                         console.log(data.body.list);
@@ -559,7 +559,7 @@
             $('.ajax-btn-apply-discount').click(function () {
                 var _d_id = $("[name=apply-discount]").val();
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/setDiscountFrom?sess=" + sessionStorage.session,
+                    url: "/api/Api/setDiscountFrom?sess=" + sessionStorage.session,
                     type: "POST",
                     data: JSON.stringify({
                         d_id: _d_id,
