--- a/Member-Transfer.html
+++ b/Member-Transfer.html
@@ -400,7 +400,7 @@
             }
             function userInformation() {
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/getUser?sess=" + sessionStorage.session,
+                    url: "/api/Api/getUser?sess=" + sessionStorage.session,
                     type: "GET",
                     success: function (data) {
                         if (data.status) {
@@ -418,7 +418,7 @@
 
             $(window).load(function () {
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/getFooterInfo",
+                    url: "/api/Api/getFooterInfo",
                     type: "GET",
                     success: function (data) {
                         console.log(data)
@@ -455,7 +455,7 @@
                 var _account = _parent.find('[name=account]').val();
                 var _passwd = _parent.find('[name=passwd]').val();
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/login",
+                    url: "/api/Api/login",
                     type: "POST",
                     data: JSON.stringify({
                         account: _account,
@@ -479,7 +479,7 @@
             });
             $('.ajax-btn-logout').click(function () {
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/logout",
+                    url: "/api/Api/logout",
                     type: "GET",
                     success: function (data) {
                         if (data.status) {
@@ -490,7 +490,7 @@
                                     $('.jq-login-before').show();
                                     $('.jq-login-after').hide();
                                     $('.jq-member-nam').empty();
-                                    window.location.href = 'http://ldyllive.com/Home-Index.html';
+                                    window.location.href = '/Home-Index.html';
                                     break;
                             }
                         }
@@ -503,7 +503,7 @@
                 checkPhone(_pcb_phone);
                 if (_phone_key == true) {
                     $.ajax({
-                        url: "http://ldyllive.com/api/Api/addPhonecCallBack?sess=" + sessionStorage.session,
+                        url: "/api/Api/addPhonecCallBack?sess=" + sessionStorage.session,
                         type: "POST",
                         data: JSON.stringify({
                             pcb_phone: _pcb_phone,
@@ -524,7 +524,7 @@
             });
             $('.jq-btn-pop-register').click(function () {
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/getCaptcha",
+                    url: "/api/Api/getCaptcha",
                     type: "GET",
                     success: function (data) {
                         $(".jq-pop-register").find('.jq-captcha-container').find('img').remove();
@@ -548,7 +548,7 @@
                 var _password = $('.jq-pop-register').find('[name=password]').val();
                 var _captcha = $('.jq-pop-register').find('[name=captcha]').val();
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/registered/" + _invitecode,
+                    url: "/api/Api/registered/" + _invitecode,
                     type: "POST",
                     data: JSON.stringify({
                         name: _username,
@@ -575,7 +575,7 @@
             var _transfer_key = 1;
             $(window).load(function () {
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/withdrawalForm?sess=" + sessionStorage.session,
+                    url: "/api/Api/withdrawalForm?sess=" + sessionStorage.session,
                     type: "GET",
                     success: function (data) {
                         if (data.status) {
@@ -589,7 +589,7 @@
                     }
                 });
                 $.ajax({
-                    url: "http://ldyllive.com/api/Api/getThirdBlance?sess=" + sessionStorage.session,
+                    url: "/api/Api/getThirdBlance?sess=" + sessionStorage.session,
                     type: "GET",
                     success: function (data) {
                         if (data.status) {
@@ -620,7 +620,7 @@
                 var _cash_nam2 = $('.jq-row-game').find('.jq-cash-nam').val();
                 if (_transfer_key == 1) {
                     $.ajax({
-                        url: "http://ldyllive.com/api/Api/transferToThird?sess=" + sessionStorage.session + "&amount=" + _cash_nam1,
+                        url: "/api/Api/transferToThird?sess=" + sessionStorage.session + "&amount=" + _cash_nam1,
                         type: "GET",
                         success: function (data) {
                             if (data.status) {
@@ -637,7 +637,7 @@
                     });
                 } else if (_transfer_key == 2) {
                     $.ajax({
-                        url: "http://ldyllive.com/api/Api/transferToLdyl?sess=" + sessionStorage.session + "&amount=" + _cash_nam1,
+                        url: "/api/Api/transferToLdyl?sess=" + sessionStorage.session + "&amount=" + _cash_nam1,
                         type: "GET",
                         success: function (data) {
                             if (data.status) {
